css/warhorn-classics.css
/* ... */
#header p.author { /* white/generic title rule */
    border-top: .15em solid rgba(255, 255, 255, 25%);
}

.color-theme-1 #header p.author { /* sepia title rule */
    border-top: .15em solid rgba(243, 234, 203, 10%);
}

.color-theme-2 #header p.author { /* night title rule */
    border-top: .15em solid rgba(45, 49, 67, 30%);
}

#header p.date { /* hide date from title header */
    display: none;
}

#about-this-book h1 {
    font-family: inherit;
    font-style: normal;
    font-weight: 700;
    letter-spacing: .01em;
    text-transform: none;
    font-variant: normal;
    font-size: 1.2em;
    border: none;
}

/* --- */

/*BOOK BODY HEADINGS*/

/* link to section link icon */
a.anchor-section::before {
    content: "\f0c1";
    font-family: "Font Awesome 5 Free", FontAwesome, sans-serif;
    font-style: normal;
    font-weight: 400;
}

.hasAnchor a.anchor-section:hover {
    text-decoration: none !important;
    opacity: 75%;
}

/* link to section tooltip */
.hasAnchor a.anchor-section {
    position: absolute;
    display: inline-block;
}

.hasAnchor a.anchor-section:after {
    content: "link to section";
    position: absolute;
    visibility: hidden;
    width: 110px;
    font-family: calluna-sans, sans-serif;
    letter-spacing: .0125em;
    font-size: 14px;
    line-height: 28px;
    font-style: normal;
    font-variant: normal;
    text-transform: none;
    font-weight: 400;
    background-color: #e7e7e7;
    color: #333;
    text-align: center;
    padding: 0;
    z-index: 1;
    top: 20%;
    left: 160%;
    box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 20%);
    opacity: 0;
    transition: opacity .2s;
}

.hasAnchor a.anchor-section:hover::after {
    visibility: visible;
    transition-delay: 1s;
    opacity: .7;
}

h1.hasAnchor a.anchor-section {
    font-size: .7em;
    transform: translateY(.4em);
}

.book .book-body .page-wrapper .page-inner section.normal > div ~ div h1.hasAnchor a.anchor-section {
    font-size: inherit;
    transform: none;
}

/*--*/

h1, h2 {
	text-wrap: balanced; /*doesn't seem to actually be supported*/
}

h1 {
	font-family: calluna, serif;
	border-bottom: .1em solid #1aa9ab;
	line-height: 1;
	padding-bottom: .5em;
	font-weight: 400;
	/*all small caps*/
	text-transform: lowercase;
	font-variant: small-caps;
	letter-spacing: .03em;
	/*opentype asc*/
	/*font-variant-caps: all-small-caps;
	-moz-font-feature-settings: "smcp";
	-webkit-font-feature-settings: "smcp";
	font-feature-settings: "smcp";*/
}

h1 .header-section-number {
	display: block;
	font-size: .67em;
	padding-right: 0em;
	width: 75%;
}

h2 {
	font-weight: 700;
	line-height: 1.5em;
	letter-spacing: .6px;
/*    position: relative;*/
/*    left: -1.2em;*/
	border-left: .2em solid #1aa9ab;
	padding-left: 1em;
}

/*sepia mode h2 rule*/
.book-color-theme-1 h2, .book-color-theme-2 h2 {
	border-color: inherit;
}

/*night mode h2 rule*/
.book-color-theme-2 h2 {
	border-color: #3f5061;
}

.book .book-body .page-wrapper .page-inner section.normal h2 {
	font-size: 1em;
}

h2 .header-section-number {
	display: block;
	font-weight: 400;
	font-variant: small-caps;
	text-transform: lowercase;
	padding-right: 0em;
	margin-top: 2em;
	width: 75%;
  	/*opentype asc
    font-variant-caps: all-small-caps;
    -moz-font-feature-settings: "smcp";
    -webkit-font-feature-settings: "smcp";
    font-feature-settings: "smcp";*/
}

h2 .header-section-number::before {
	content: "Section ";
}

h3 {
  font-style: italic;
  font-weight: 400;
}

.book .book-body .page-wrapper .page-inner section.normal h3 em, .book .book-body .page-wrapper .page-inner section.normal h3 i, .book .book-body .page-wrapper .page-inner section.normal > div ~ div h1 em, .book .book-body .page-wrapper .page-inner section.normal > div ~ div h1 i {
	font-style: normal;
}

.book .book-body .page-wrapper .page-inner section.normal h3 {
	font-size: 1em;
}

h3 .header-section-number {
  font-style: normal;
  font-weight: 700;
}

/* SERMON HEADINGS */

.book .book-body .page-wrapper .page-inner section.normal > div ~ div h1 {
    font-family: inherit;
    font-size: 1em;
    line-height: inherit;
    font-style: italic;
    font-weight: 400;
    border: none;
    padding-bottom: inherit;
    text-transform: none;
    font-variant: normal;
    letter-spacing: inherit;
}

.book .book-body .page-wrapper .page-inner section.normal > div ~ div h1 .header-section-number {
    display: initial;
    font-size: inherit;
    font-style: normal;
    font-weight: 700;
    padding-right: .5em;
}

.editorial::before {
    content: "[";
    font-style: normal;
}

.editorial::after {
    content: "]";
    font-style: normal;
}

.book .book-body .page-wrapper .page-inner section.normal > div ~ div h1 + p::first-line, .book .book-body .page-wrapper .page-inner section.normal > div ~ div h2 + p::first-line {
    text-transform: none;
    font-variant: normal;
    letter-spacing: inherit;
}

/* for subsubpoints if using h4; problem: does not correctly style first-letters as lining-nums 
.book .book-body .page-wrapper .page-inner section.normal h4 {
    font-size: 1em; /*set h4 to body text size
    font-weight: 400; /*set h4 to body text weight
    text-indent: -15px;
}

.book .book-body .page-wrapper .page-inner section.normal h4::before {
    content: "\25B8";
    font-style: normal;
    float: left;
    display: inline-block;
    width: 15px;
    text-align: center;
    position: relative;
    left: -15px;
}
*/

/* HEADER & TOC */
.book .book-header h1 {
	font-family: calluna, serif;
	font-style: normal;
	border: none;
	padding-bottom: 0;
	text-transform: lowercase;
	font-variant: small-caps;
	letter-spacing: .1em;
}

.book .book-header, .book .book-summary {
	font-family: calluna-sans, sans-serif;
}

.book .book-summary {
	font-size: 16px;
	line-height: 1em;
}

.book .book-summary ul.summary li a:hover, .book .book-summary ul.summary li.active > a {
	color: #1aa9ab;
}
/* ... */

